--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="My first webpage, with CSS" />
     <meta name="keywords" content="mths, icd2o" />
-    <meta name="author" content="Mr. Coxall" />
+    <meta name="author" content="Domenic dangelo" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>My first webpage, with CSS</title>
