changed list and table

--- a/index2.html
+++ b/index2.html
@@ -14,31 +14,31 @@
     <h1>Style is important</h1>
     <p>Here is a list</p>
     <ul>
-      <li>Coffee</li>
-      <li>Tea</li>
-      <li>Milk</li>
+      <li>Europe</li>
+      <li>North America</li>
+      <li>Africa</li>
     </ul>
     <p>Here is a table</p>
     <table>
       <tr>
-        <th>Company</th>
-        <th>Contact</th>
+        <th>Continent</th>
         <th>Country</th>
+        <th>Capital</th>
       </tr>
       <tr>
-        <td>Alfreds Futterkiste</td>
-        <td>Maria Anders</td>
-        <td>Germany</td>
+        <td>Asia</td>
+        <td>Europe</td>
+        <td>Africa</td>
       </tr>
       <tr>
-        <td>Centro comercial Moctezuma</td>
-        <td>Francisco Chang</td>
-        <td>Mexico</td>
+        <td>Japan</td>
+        <td>Italy</td>
+        <td>Ghana</td>
       </tr>
       <tr>
-        <td>Ernst Handel</td>
-        <td>Roland Mendel</td>
-        <td>Austria</td>
+        <td>Tokyo</td>
+        <td>Rome</td>
+        <td>Accra</td>
       </tr>
     </table>
   </body>
